--- a/requirements.txt
+++ b/requirements.txt
@@ -10,10 +10,10 @@ gunicorn==19.6.0
 httpie==0.9.3
 jdcal==1.2
 Markdown==2.6.6
-matplotlib==1.5.1
 mysqlclient==1.3.7
 numpy==1.11.0
 Pillow==3.3.0
+psycopg2==2.6.2
 py==1.4.31
 pygal==2.2.3
 Pygments==2.1.3
