--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ colorama==0.3.7
 cycler==0.10.0
 dj-database-url==0.4.1
 Django==1.9.5
+django-bootstrap-form==3.2.1
 django-filter==0.13.0
 django-tinymce==2.3.0
 djangorestframework==3.3.3
