--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+boto==2.41.0
 colorama==0.3.7
 cycler==0.10.0
 dj-database-url==0.4.1
 Django==1.9.5
 django-bootstrap-form==3.2.1
 django-filter==0.13.0
+django-storages==1.4.1
 django-tinymce==2.3.0
 djangorestframework==3.3.3
 et-xmlfile==1.0.1
